--- a/styles.css
+++ b/styles.css
@@ -7,18 +7,24 @@
 div.container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     height: 50vh;
+    background-color: black;
 }
 
 div.container div.ball {
     width: 100px;
     height: 100px;
     background-color: blueviolet;
-    transition-duration: 1s;
+    transition-duration: 0.3s;
+    transition-timing-function: cubic-bezier(1, 0.02, 0, -1.21);
 }
 
-div.container div.ball:hover{
-    border-radius: 50%;
+div.container:hover div.ball {
+    /* transform: rotateZ(120deg); */
+    /* transform: scale(2); */
+    transform: translateX(400px);
+    background-color: red;
     cursor: pointer;
+    /* border-radius: 50%; */
 }
